--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ authors:
 homepage: https://github.com/AppsFlyerSDK/flutter_appsflyer_sdk
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
   flutter: ">=0.1.4 <2.0.0"
 
 dependencies:
